--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
   </style>
 </head>
 <body>
+  <div style="text-align: center; margin-top: 30px;">
+  <img src="logo.svg" alt="De Mazenod College Logo" style="width: 150px;"/>
+  <h1>De Mazenod College Old Boys' Association</h1>
+  <h2>Coming Soon</h2>
+</div>
   <h1>Coming Soon!</h1>
   <p>Our website is under construction. Stay tuned.</p>
 </body>
