--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
   <div style="text-align: center; margin-top: 30px;">
-  <img src="logo.svg.png" alt="De Mazenod College Logo" style="width: 150px;"/>
+  <img src="Logo.svg" alt="De Mazenod College Logo" style="width: 150px;"/>
   <h1>De Mazenod College Old Boys' Association</h1>
   </div>
   <h1>Coming Soon!</h1>
