--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 <body>
   <div style="text-align: center; margin-top: 30px;">
   <img src="Logo.svg" alt="Logo" style="width: 150px;"/>
-  <h1>De Mazenod College Old Boys' Association</h1>
+<img src="logo.svg" alt="De Mazenod College Logo" />
+    <h1>De Mazenod College Old Boys' Association</h1>
   </div>
   <h1>Coming Soon!</h1>
   <p>Our website is under construction. Stay tuned.</p>
