--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 </head>
 <body>
   <div style="text-align: center; margin-top: 30px;">
-  <img src="Logo.svg" alt="Logo" style="width: 150px;"/>
-<img src="logo.svg" alt="Logo" />
+<img src="Logo.svg" alt="Logo" />
     <h1>De Mazenod College Old Boys' Association</h1>
   </div>
   <h1>Coming Soon!</h1>
