--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
   <div style="text-align: center; margin-top: 30px;">
-<img src="L1.png" alt="L1" />
+<img src="logo.png" alt="Logo" style="width: 10%; max-width: 100px;" />
     <h1>De Mazenod College Old Boys' Association</h1>
   </div>
   <h1>Coming Soon!</h1>
