--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
   <title>Coming Soon</title>
   <style>
     body {
+      background-color: #5B9BD5;
       font-family: sans-serif;
       text-align: center;
       padding-top: 100px;
-      background-color: #f8f9fa;
+  
+
+      
     }
     h1 {
       font-size: 48px;
